--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,36 @@
-<router-outlet />
+<header class="bg-white">
+  <nav class="mx-auto flex max-w-7xl items-center justify-between p-6 lg:px-8" aria-label="Global">
+    <div class="flex lg:flex-1">
+      <a href="#" class="-m-1.5 p-1.5">
+        <span class="text-2xl">Rajinder Singh Sodhi</span>
+      </a>
+    </div>
+    <div class="hidden lg:flex lg:gap-x-12">
+      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">About</a>
+      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Experience</a>
+      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Projects</a>
+    </div>
+    <div class="hidden lg:flex lg:flex-1 lg:justify-end">
+      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Contact<span aria-hidden="true">&rarr;</span></a>
+    </div>
+  </nav>
+  <section>
+    <div class="flex justify-center items-center gap-20" style="height: 80vh;">
+      <div  class="flex justify-center">
+        <img src="https://avatars.githubusercontent.com/u/78411923?v=4" alt="" style="height: 15rem; width: 15rem;" class="rounded-full">
+      </div>
+      <div class="flex flex-col items-center gap-7">
+        <div class="flex flex-col items-center gap-2">
+            <span class="text-4xl">Rajinder Singh Sodhi</span>
+            <span class="text-2xl">Full Stack Developer</span>
+        </div>
+        <div class="flex">
+          <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Download CV</button>
+          <!-- <button class="lg:w1/2">Download CV</button> -->
+          <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact</button>
+          <!-- <button class="lg:w1/2">Contact</button> -->
+        </div>
+      </div>
+    </div>
+  </section>
+  <router-outlet />
