--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
       </a>
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
-      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">About</a>
+      <a href="#about" class="text-lg font-semibold leading-6 text-gray-900">About</a>
       <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Experience</a>
       <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Projects</a>
     </div>
@@ -15,7 +15,7 @@
     </div>
   </nav>
   <section>
-    <div class="flex justify-center items-center gap-20" style="height: 80vh;">
+    <div class="flex justify-center items-center gap-20"  style="height: 80vh;">
       <div  class="flex justify-center">
         <img src="https://avatars.githubusercontent.com/u/78411923?v=4" alt="" style="height: 15rem; width: 15rem;" class="rounded-full">
       </div>
@@ -27,9 +27,45 @@
         <div class="flex">
           <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Download CV</button>
           <!-- <button class="lg:w1/2">Download CV</button> -->
-          <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact</button>
+          <!-- <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact</button> -->
           <!-- <button class="lg:w1/2">Contact</button> -->
         </div>
+        <div class="flex items-center gap-10">
+          <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="" style="height: 2.5rem; width: 2.5rem;">
+          <img src="https://cdn.iconscout.com/icon/free/png-256/free-linkedin-1796350-1524231.png?f=webp" alt="" style="height: 2rem; width: 2rem;">
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="flex flex-col justify-evenly items-center" style="height: 100vh;" id="about">
+    <div class="flex justify-center my-5">
+      <h1 class="text-6xl">About</h1>
+    </div>
+    <div class="flex justify-evenly gap-10 mx-3">
+      <div class="w-1/2 flex flex-col items-center border-black border-2 rounded-3xl p-5">
+        <h1 class="text-xl">Working at Humanli.ai</h1>
+        <div class="flex flex-col items-center">
+          <h1>as Full Stack Developer</h1>
+          <div class="flex flex-wrap gap-3 p-5">
+            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Angular</p>
+            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Flask</p>
+            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Firebase</p>
+            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
+            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">GCP</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="w-1/2 flex flex-col items-center border-black border-2 rounded-3xl p-5">
+        <h1 class="text-xl">Education</h1>
+        <div class="flex flex-col items-center">
+          <h1>BE Computer Science & Engineering</h1>
+          <div class="flex p-5">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem illum accusantium quos atque, perspiciatis ipsam beatae ab. Quis ipsa inventore illo sunt voluptas eius et optio blanditiis odit tenetur molestias, distinctio nesciunt adipisci nihil quo perspiciatis fuga mollitia nemo? Exercitationem quasi odit fugit nulla. Quasi numquam explicabo recusandae tempore exercitationem?</p>
+          </div>
+        </div>
+      </div>
+      <div class="flex">
       </div>
     </div>
   </section>
