--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,21 +42,21 @@
       <h1 class="text-6xl">About</h1>
     </div>
     <div class="flex justify-evenly gap-10 mx-3">
-      <div class="w-1/2 flex flex-col items-center border-black border-2 rounded-3xl p-5">
+      <div class="w-1/2 flex flex-col items-center border-black border rounded-3xl p-5">
         <h1 class="text-xl">Working at Humanli.ai</h1>
         <div class="flex flex-col items-center">
           <h1>as Full Stack Developer</h1>
           <div class="flex flex-wrap gap-3 p-5">
-            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Angular</p>
-            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Flask</p>
-            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Firebase</p>
-            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
-            <p class="border-black border-2 rounded-md bg-black p-2" style="color: white;">GCP</p>
+            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
+            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
+            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
+            <p class="border-black border rounded-md bg-black p-2" style="color: white;">GCP</p>
           </div>
         </div>
       </div>
 
-      <div class="w-1/2 flex flex-col items-center border-black border-2 rounded-3xl p-5">
+      <div class="w-1/2 flex flex-col items-center border-black border rounded-3xl p-5">
         <h1 class="text-xl">Education</h1>
         <div class="flex flex-col items-center">
           <h1>BE Computer Science & Engineering</h1>
@@ -66,6 +66,70 @@
         </div>
       </div>
       <div class="flex">
+      </div>
+    </div>
+  </section>
+
+  <section id="about">
+    <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
+      <div class="flex justify-center my-5">
+        <h1 class="text-6xl">Experience</h1>
+      </div>
+      <div class="flex justify-evenly gap-10 mx-3">
+        <div class="w-1/3 flex flex-col items-center border-black border rounded-3xl p-5">
+          <h1 class="text-xl">Frontend Development</h1>
+          <div class="flex flex-col items-center">
+            <h1>as Full Stack Developer</h1>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Bootstrap</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Tailwind CSS</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Java</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Python</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Operating System</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Computer Networks</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">DBMS</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="w-1/3 flex flex-col items-center border-black border rounded-3xl p-5">
+          <h1 class="text-xl">Backend Development</h1>
+          <div class="flex flex-col items-center">
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">MongoDB</p>
+            </div>
+          </div>
+        </div>
+        <div class="w-1/3 flex flex-col border-black border rounded-3xl p-5">
+          <div class="flex justify-center">
+            <h1 class="text-xl">Programming Languages</h1>
+          </div>
+          <div class="flex flex-col">
+            <div class="flex flex-col p-5">
+              <div class="flex items-center gap-5 py-2">
+                <img src="https://e7.pngegg.com/pngimages/510/15/png-clipart-java-programming-computer-programming-programming-language-android-coffee-jar-text-logo.png" alt="" style="height: 2rem;" class="rounded-md">
+                <span>Java</span>
+              </div>
+              <div class="flex items-center gap-5 py-2">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6a/JavaScript-logo.png/768px-JavaScript-logo.png" alt="" style="height: 2rem;" class="rounded-md">
+                <span>Java</span>
+              </div>
+              <div class="flex items-center gap-5 py-2">
+                <img src="https://w7.pngwing.com/pngs/74/362/png-transparent-typescript-plain-logo-icon-thumbnail.png" alt="" style="height: 2rem;" class="rounded-md">
+                <span>Typescript</span>
+              </div>
+              <div class="flex items-center gap-5 py-2">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxe6IR3EKgALq0lEUvpW3GmPH8rpAv1cK0_w&s" alt="" style="height: 2rem;" class="rounded-md">
+                <span>Python</span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
