--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,21 +42,26 @@
       <h1 class="text-6xl">About</h1>
     </div>
     <div class="flex justify-evenly gap-10 mx-3">
-      <div class="w-1/2 flex flex-col items-center border-black border rounded-3xl p-5">
-        <h1 class="text-xl">Working at Humanli.ai</h1>
-        <div class="flex flex-col items-center">
-          <h1>as Full Stack Developer</h1>
-          <div class="flex flex-wrap gap-3 p-5">
-            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
-            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
-            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
-            <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
-            <p class="border-black border rounded-md bg-black p-2" style="color: white;">GCP</p>
+      <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
+        <h1 class="text-xl">Work Experience</h1>
+        <div class="w-full flex flex-col">
+          <div class="flex flex-col items-center">
+            <div class="flex justify-between items-center px-20">
+              <span class="text-lg">Humanli.ai</span>
+              <span class="ms-10 text-sm">15 April, 2024 - Present</span>
+            </div>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">GCP</p>
+            </div>
           </div>
         </div>
       </div>
 
-      <div class="w-1/2 flex flex-col items-center border-black border rounded-3xl p-5">
+      <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
         <h1 class="text-xl">Education</h1>
         <div class="flex flex-col items-center">
           <h1>BE Computer Science & Engineering</h1>
@@ -76,7 +81,7 @@
         <h1 class="text-6xl">Experience</h1>
       </div>
       <div class="flex justify-evenly gap-10 mx-3">
-        <div class="w-1/3 flex flex-col items-center border-black border rounded-3xl p-5">
+        <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
           <h1 class="text-xl">Frontend Development</h1>
           <div class="flex flex-col items-center">
             <h1>as Full Stack Developer</h1>
@@ -95,7 +100,7 @@
           </div>
         </div>
   
-        <div class="w-1/3 flex flex-col items-center border-black border rounded-3xl p-5">
+        <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
           <h1 class="text-xl">Backend Development</h1>
           <div class="flex flex-col items-center">
             <div class="flex flex-wrap gap-3 p-5">
@@ -105,7 +110,7 @@
             </div>
           </div>
         </div>
-        <div class="w-1/3 flex flex-col border-black border rounded-3xl p-5">
+        <div class="flex flex-col border-black border rounded-3xl p-5" style="width: 30vw;">
           <div class="flex justify-center">
             <h1 class="text-xl">Programming Languages</h1>
           </div>
