Added project section

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
     </div>
     <div class="hidden lg:flex lg:gap-x-12">
       <a href="#about" class="text-lg font-semibold leading-6 text-gray-900">About</a>
-      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Experience</a>
-      <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Projects</a>
+      <a href="#experience" class="text-lg font-semibold leading-6 text-gray-900">Experience</a>
+      <a href="#projects" class="text-lg font-semibold leading-6 text-gray-900">Projects</a>
     </div>
     <div class="hidden lg:flex lg:flex-1 lg:justify-end">
       <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Contact<span aria-hidden="true">&rarr;</span></a>
@@ -75,7 +75,7 @@
     </div>
   </section>
 
-  <section id="about">
+  <section id="experience">
     <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
       <div class="flex justify-center my-5">
         <h1 class="text-6xl">Experience</h1>
@@ -132,6 +132,73 @@
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRxe6IR3EKgALq0lEUvpW3GmPH8rpAv1cK0_w&s" alt="" style="height: 2rem;" class="rounded-md">
                 <span>Python</span>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+    <section id="projects">
+    <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
+      <div class="flex justify-center my-5">
+        <h1 class="text-6xl">Projects</h1>
+      </div>
+      <div class="flex justify-evenly gap-10 mx-3">
+        <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
+          <h1 class="text-xl">Convocraze</h1>
+          <div class="flex flex-col items-center">
+            <h1>Chating web app</h1>
+            <div class="">
+              <p class="text-justify">Developed a real-time chat web app with friend addition, user search, and text/photo messaging using HTML, CSS, Javascript, ReactJs, Firebase, and Material UI. 
+                Integrated Firebase for real-time data sync and user authentication. Implemented intuitive UI for seamless user experience.
+                </p>
+            </div>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Material UI</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+            </div>
+          </div>
+        </div>
+  
+        <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
+          <h1 class="text-xl">Backend Development</h1>
+          <div class="flex flex-col items-center">
+            <h1>Disney Hotstar Clone</h1>
+            <div class="">
+              <p class="text-justify">Build a Disney+ Hotstar clone with identical frontend design using HTML, CSS, JavaScript, ReactJs, and React libraries including Axios and React-Icons. Utilized TMDB API for fetching movies and TV shows data, ensuring seamless integration with the original website.                
+                </p>
+            </div>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Axios</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Material UI</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">TMDB API</p>
+            </div>
+          </div>
+        </div>
+        <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
+          <h1 class="text-xl">Covid Management System</h1>
+          <div class="flex flex-col items-center">
+            <h1>management of covid vaccination</h1>
+            <div class="">
+              <p class="text-justify">Engineered and deployed a comprehensive COVID-19 testing data management website integrating user authentication, test data collection, and report tracking functionalities. Utilized HTML, CSS, ReactJs, and Firebase technologies to enhance data handling efficiency and user experience.                
+                </p>
+            </div>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
             </div>
           </div>
         </div>
