Changed color scheme

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,6 +14,8 @@
       <a href="#" class="text-lg font-semibold leading-6 text-gray-900">Contact<span aria-hidden="true">&rarr;</span></a>
     </div>
   </nav>
+
+  <!-- Home Section -->
   <section>
     <div class="flex justify-center items-center gap-20"  style="height: 80vh;">
       <div  class="flex justify-center">
@@ -37,36 +39,52 @@
       </div>
     </div>
   </section>
+  <!-- Home Section -->
+
+  <!-- About Section  -->
   <section class="flex flex-col justify-evenly items-center" style="height: 100vh;" id="about">
     <div class="flex justify-center my-5">
       <h1 class="text-6xl">About</h1>
     </div>
+    <div class="flex justify-center" style="width: 60vw;">
+      <p class="text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
+    </div>
     <div class="flex justify-evenly gap-10 mx-3">
       <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
-        <h1 class="text-xl">Work Experience</h1>
-        <div class="w-full flex flex-col">
-          <div class="flex flex-col items-center">
-            <div class="flex justify-between items-center px-20">
+        <h1 class="text-xl font-bold">Work Experience</h1>
+        <div class="w-full flex flex-col justify-center items-center" style="height: 100%;">
+          <div class="flex flex-col">
+            <div class="flex justify-between items-center px-5">
               <span class="text-lg">Humanli.ai</span>
               <span class="ms-10 text-sm">15 April, 2024 - Present</span>
             </div>
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">GCP</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Angular</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Flask</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Gen Ai</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">GCP</p>
             </div>
           </div>
         </div>
       </div>
 
       <div class="flex flex-col items-center border-black border rounded-3xl p-5" style="width: 30vw;">
-        <h1 class="text-xl">Education</h1>
+        <h1 class="text-xl font-bold">Education</h1>
         <div class="flex flex-col items-center">
           <h1>BE Computer Science & Engineering</h1>
-          <div class="flex p-5">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem illum accusantium quos atque, perspiciatis ipsam beatae ab. Quis ipsa inventore illo sunt voluptas eius et optio blanditiis odit tenetur molestias, distinctio nesciunt adipisci nihil quo perspiciatis fuga mollitia nemo? Exercitationem quasi odit fugit nulla. Quasi numquam explicabo recusandae tempore exercitationem?</p>
+          <div class="flex flex-col mt-5">
+            <div class="flex justify-center">
+              <span>Relevant course work</span>
+            </div>
+            <div class="flex flex-wrap gap-3 p-5">
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">DSA</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Java</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Computer Networks</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">DBMS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Operating System</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Pyhton</p>
+            </div>
           </div>
         </div>
       </div>
@@ -74,7 +92,9 @@
       </div>
     </div>
   </section>
+  <!-- About Section  -->
 
+  <!-- Experienc Section  -->
   <section id="experience">
     <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
       <div class="flex justify-center my-5">
@@ -86,16 +106,11 @@
           <div class="flex flex-col items-center">
             <h1>as Full Stack Developer</h1>
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Angular</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Gen Ai</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Bootstrap</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Tailwind CSS</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Java</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Python</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Operating System</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Computer Networks</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">DBMS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Angular</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Gen Ai</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Bootstrap</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Tailwind CSS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Javascript</p>
             </div>
           </div>
         </div>
@@ -104,9 +119,10 @@
           <h1 class="text-xl">Backend Development</h1>
           <div class="flex flex-col items-center">
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Flask</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">MongoDB</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Flask</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">MongoDB</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Python</p>
             </div>
           </div>
         </div>
@@ -138,7 +154,9 @@
       </div>
     </div>
   </section>
+  <!-- Experience Section  -->
 
+  <!-- Projects Section  -->
     <section id="projects">
     <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
       <div class="flex justify-center my-5">
@@ -155,13 +173,13 @@
                 </p>
             </div>
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Material UI</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Material UI</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
             </div>
           </div>
         </div>
@@ -175,13 +193,13 @@
                 </p>
             </div>
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Axios</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Material UI</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">TMDB API</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Axios</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Material UI</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">TMDB API</p>
             </div>
           </div>
         </div>
@@ -194,15 +212,17 @@
                 </p>
             </div>
             <div class="flex flex-wrap gap-3 p-5">
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">HTML</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">CSS</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Javascript</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">ReactJs</p>
-              <p class="border-black border rounded-md bg-black p-2" style="color: white;">Firebase</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">HTML</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">CSS</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Javascript</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">ReactJs</p>
+              <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
             </div>
           </div>
         </div>
       </div>
     </div>
   </section>
+  <!-- Projects Section  -->
+
   <router-outlet />
