Added styling to navbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="mx-auto flex items-center justify-between p-6 lg:px-8 fixed top-0 left-0 w-full bg-white" aria-label="Global">
+<nav class="flex items-center justify-between p-3 lg:px-8 fixed top-0 left-0 w-full bg-white border-b border-gray rounded-3xl m-auto" aria-label="Global">
   <div class="flex lg:flex-1">
     <a href="#" class="-m-1.5 p-1.5">
       <span class="text-2xl">Rajinder Singh Sodhi</span>
@@ -10,7 +10,7 @@
     <a href="#projects" class="text-lg leading-6 text-gray-900">Projects</a>
   </div>
   <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-    <a href="#contactMe" class="text-lg leading-6 text-gray-900">Contact<span aria-hidden="true">&rarr;</span></a>
+    <a href="#contactMe" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Me</a>
   </div>
 </nav>
 
@@ -26,10 +26,10 @@
           <span class="text-4xl">Rajinder Singh Sodhi</span>
           <span class="text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
       </div>
-      <div class="flex">
+      <div class="flex items-center">
         <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download CV</a>
         <!-- <button class="lg:w1/2">Download CV</button> -->
-        <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Info</button>
+        <!-- <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Info</button> -->
         <!-- <button class="lg:w1/2">Contact</button> -->
       </div>
       <div class="flex items-center gap-10">
