Added public links to icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
         <!-- <button class="lg:w1/2">Contact</button> -->
       </div>
       <div class="flex items-center gap-10">
-        <img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="" style="height: 2.5rem; width: 2.5rem;">
-        <img src="https://cdn.iconscout.com/icon/free/png-256/free-linkedin-1796350-1524231.png?f=webp" alt="" style="height: 2rem; width: 2rem;">
+        <a href="https://github.com/rajindersinghsodhi" target="_blank"><img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="" style="height: 2.5rem; width: 2.5rem;"></a>
+        <a href="https://www.linkedin.com/in/rajindersinghsodhi-541744227/" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-256/free-linkedin-1796350-1524231.png?f=webp" alt="" style="height: 2rem; width: 2rem;"></a>
       </div>
     </div>
   </div>
