--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,14 @@
-<nav class="flex items-center justify-between p-3 lg:px-8 fixed top-0 left-0 w-full bg-white border-b border-gray rounded-3xl m-auto" aria-label="Global">
-  <div class="flex lg:flex-1">
+<nav class="flex items-center justify-between p-3 lg:px-8 fixed top-0 left-10 lg:left-0 lg:w-full w-10/12 bg-white border-b border-gray rounded-3xl m-auto" aria-label="Global">
+  <div class="hidden lg:flex lg:flex-1">
     <a href="#" class="-m-1.5 p-1.5">
       <span class="text-2xl">Rajinder Singh Sodhi</span>
     </a>
   </div>
-  <div class="hidden lg:flex lg:gap-x-12">
+  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
     <a href="#about" class="text-lg leading-6 text-gray-900">About</a>
     <a href="#experience" class="text-lg leading-6 text-gray-900">Experience</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900">Projects</a>
-  </div>
+  </div> 
   <div class="hidden lg:flex lg:flex-1 lg:justify-end">
     <a href="#contactMe" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Me</a>
   </div>
@@ -16,15 +16,15 @@
 
 <!-- Home Section -->
 <section class="flex flex-col items-center justify-center">
-  <div class="flex justify-center items-center gap-20" style="height: 100vh;">
+  <div class="flex flex-col lg:flex-row justify-center items-center gap-20" style="height: 100vh;">
     <div  class="flex justify-center">
       <img src="rajinder_image.jpeg" alt="" style="height: 15rem; width: 15rem;" class="rounded-full">
     </div>
     <div class="flex flex-col items-center gap-7">
       <div class="flex flex-col items-center gap-2">
-          <span class="text-base">Hello, I am</span>
-          <span class="text-4xl">Rajinder Singh Sodhi</span>
-          <span class="text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
+          <span class="lg:text-base">Hello, I am</span>
+          <span class="lg:text-4xl">Rajinder Singh Sodhi</span>
+          <span class="Lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
       </div>
       <div class="flex items-center">
         <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download CV</a>
@@ -47,10 +47,10 @@
     <h1 class="text-5xl font-semibold">About</h1>
   </div>
   <div class="flex justify-start" style="width: 55vw;">
-    <p class="text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
+    <p class="hidden lg:flex text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
   </div>
-  <div class="flex justify-evenly gap-10 mx-3">
-    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5" style="width: 30vw;">
+  <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
+    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
       <div class="flex">
         <img src="https://img.freepik.com/premium-vector/achievement-badge-silhouette-icon-award-medal-with-ribbons_608189-613.jpg" alt="" style="height: 2.2rem;">
         <h1 class="text-xl font-bold">Work Experience</h1>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
       <div class="flex">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvwlvb_7UH3ABz52MmFSyF8kpD3CFfLmLfHQ&s" alt="" style="height: 2rem;" class="px-2">
         <h1 class="text-xl font-bold">Education</h1>
@@ -105,8 +105,8 @@
     <div class="flex justify-center my-5">
       <h1 class="text-5xl font-semibold">Experience</h1>
     </div>
-    <div class="flex justify-evenly gap-10 mx-3">
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+    <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
+      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <h1 class="text-xl">Frontend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <h1 class="text-xl">Backend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -136,7 +136,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+      <div class="flex flex-col  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <div class="flex justify-center">
           <h1 class="text-xl">Programming Languages</h1>
         </div>
@@ -156,13 +156,13 @@
 <!-- Experience Section  -->
 
 <!-- Projects Section  -->
-  <section id="projects">
-  <div class="flex flex-col justify-evenly items-center" style="height: 100vh;">
+  <section id="projects" class="lg:m-0 mt-20">
+  <div class="flex flex-col justify-evenly items-center">
     <div class="flex justify-center my-5">
       <h1 class="text-5xl font-semibold">Projects</h1>
     </div>
-    <div class="flex justify-evenly gap-10 mx-3">
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+    <div class="flex flex-col lg:flex-row justify-evenly lg:items-stretch items-center gap-10 mx-3">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <h1 class="text-xl font-bold">Convocraze</h1>
         <div class="flex flex-col items-start">
           <h1>Chating web app</h1>
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <h1 class="text-xl font-bold">Disney Hotstar Clone</h1>
         <div class="flex flex-col items-start">
           <h1>Frontend clone of Disney Hotstar</h1>
@@ -202,7 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5" style="width: 30vw;">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
         <h1 class="text-xl font-bold">Covid Management System</h1>
         <div class="flex flex-col items-start">
           <h1>management of covid vaccination</h1>
@@ -232,7 +232,7 @@
       <h1 class="text-5xl font-semibold">Contact Me</h1>
     </div>
     <div class="flex justify-evenly gap-10 mx-3">
-      <div class="flex items-center gap-10 border-neutral-400 border rounded-3xl p-5">
+      <div class="flex flex-col lg:flex-row items-center gap-10 border-neutral-400 border rounded-3xl p-5">
         <div class="flex items-center gap-3">
           <img src="https://cdn-icons-png.flaticon.com/512/46/46951.png" alt="" style="height:1.5rem;">
           <span class="text-lg">rajindersodhi181&#64;gmail.com</span>
