--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -248,7 +248,7 @@
 <!-- Projects Section  -->
 
 <footer class="mx-auto flex max-w-7xl items-center justify-center p-6 lg:px-8 mb-10" aria-label="Global">
-  <div class="hidden lg:flex lg:gap-x-12">
+  <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
     <a href="#about" class="text-lg leading-6 text-gray-900">About</a>
     <a href="#experience" class="text-lg leading-6 text-gray-900">Experience</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900">Projects</a>
