--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
 
 <!-- Home Section -->
 <section class="flex flex-col items-center justify-center">
-  <div class="flex flex-col lg:flex-row justify-center items-center gap-20" style="height: 100vh;">
+  <div class="flex flex-col lg:flex-row justify-center items-center lg:gap-20 gap-10" style="height: 100vh;">
     <div  class="flex justify-center">
-      <img src="rajinder_image.jpeg" alt="" style="height: 15rem; width: 15rem;" class="rounded-full">
+      <img src="rajinder_image.jpeg" alt="" class="rounded-full" id="logo">
     </div>
     <div class="flex flex-col items-center gap-7">
       <div class="flex flex-col items-center gap-2">
@@ -156,7 +156,7 @@
 <!-- Experience Section  -->
 
 <!-- Projects Section  -->
-  <section id="projects" class="lg:m-0 mt-20">
+  <section id="projects" class="lg:m-0 mt-48">
   <div class="flex flex-col justify-evenly items-center">
     <div class="flex justify-center my-5">
       <h1 class="text-5xl font-semibold">Projects</h1>
