--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,8 +23,8 @@
     <div class="flex flex-col items-center gap-7">
       <div class="flex flex-col items-center gap-2">
           <span class="lg:text-base">Hello, I am</span>
-          <span class="lg:text-4xl">Rajinder Singh Sodhi</span>
-          <span class="Lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
+          <span class="lg:text-4xl font-semibold lg:font-normal">Rajinder Singh Sodhi</span>
+          <span class="lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
       </div>
       <div class="flex items-center">
         <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download CV</a>
