--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,8 +33,8 @@
         <!-- <button class="lg:w1/2">Contact</button> -->
       </div>
       <div class="flex items-center gap-10">
-        <a href="https://github.com/rajindersinghsodhi" target="_blank"><img src="https://github.githubassets.com/assets/GitHub-Mark-ea2971cee799.png" alt="" style="height: 2.5rem; width: 2.5rem;"></a>
-        <a href="https://www.linkedin.com/in/rajindersinghsodhi-541744227/" target="_blank"><img src="https://cdn.iconscout.com/icon/free/png-256/free-linkedin-1796350-1524231.png?f=webp" alt="" style="height: 2rem; width: 2rem;"></a>
+        <a href="https://github.com/rajindersinghsodhi" target="_blank"><img src="github-icon.png" alt="" style="height: 2.5rem; width: 2.5rem;"></a>
+        <a href="https://www.linkedin.com/in/rajindersinghsodhi-541744227/" target="_blank"><img src="linkedin-icon.png" alt="" style="height: 2rem; width: 2rem;"></a>
       </div>
     </div>
   </div>
@@ -51,13 +51,13 @@
   </div>
   <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
     <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
-      <div class="flex">
-        <img src="https://img.freepik.com/premium-vector/achievement-badge-silhouette-icon-award-medal-with-ribbons_608189-613.jpg" alt="" style="height: 2.2rem;">
+      <div class="flex items-center gap-2 my-2 lg:m-0">
+        <img src="experience-icon.png" alt="" style="height: 1.5rem;">
         <h1 class="text-xl font-bold">Work Experience</h1>
       </div>
       <div class="w-full flex flex-col justify-center items-center" style="height: 100%;">
         <div class="flex flex-col">
-          <div class="flex justify-between items-center lg:px-5">
+          <div class="flex justify-between items-center">
             <span class="lg:text-lg">Humanli.ai</span>
             <span class="ms-10 text-sm">15 April, 2024 - Present</span>
           </div>
@@ -74,7 +74,7 @@
 
     <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
       <div class="flex">
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTvwlvb_7UH3ABz52MmFSyF8kpD3CFfLmLfHQ&s" alt="" style="height: 2rem;" class="px-2">
+        <img src="education-icon.png" alt="" style="height: 2rem;" class="px-2">
         <h1 class="text-xl font-bold">Education</h1>
       </div>
       <div class="flex flex-col items-center">
@@ -86,9 +86,9 @@
           <div class="flex flex-wrap gap-3 p-5">
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Data Structures & Algorithms</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Java</p>
+            <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Operating System</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">DBMS</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Computer Networks</p>
-            <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Operating System</p>
           </div>
         </div>
       </div>
@@ -130,9 +130,9 @@
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Nodejs</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Python</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Flask</p>
+            <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Git</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Firebase</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">MongoDB</p>
-            <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Git</p>
           </div>
         </div>
       </div>
@@ -234,11 +234,11 @@
     <div class="flex justify-evenly gap-10 mx-3">
       <div class="flex flex-col lg:flex-row items-center gap-10 border-neutral-400 border rounded-3xl p-5">
         <div class="flex items-center gap-3">
-          <img src="https://cdn-icons-png.flaticon.com/512/46/46951.png" alt="" style="height:1.5rem;">
+          <img src="email-icon.png" alt="" style="height:1.5rem;">
           <span class="text-lg">rajindersodhi181&#64;gmail.com</span>
         </div>
         <div class="flex items-center gap-3">
-          <img src="https://cdn.iconscout.com/icon/free/png-256/free-linkedin-1796350-1524231.png?f=webp" alt="" style="height: 1.5rem; width: 1.5rem;">
+          <img src="linkedin-icon.png" alt="" style="height: 1.5rem; width: 1.5rem;">
           <span class="text-lg">rajindersinghsodhi</span>
         </div>
       </div>
