--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,7 +27,7 @@
           <span class="lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Full Stack Developer</span>
       </div>
       <div class="flex items-center">
-        <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download Resume</a>
+        <a href="documents/resumeRajindersinghsodhi.pdf" id="downloadCV" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3" download>Download Resume</a>
         <!-- <button class="lg:w1/2">Download CV</button> -->
         <!-- <button type="button" class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 me-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700 py-3">Contact Info</button> -->
         <!-- <button class="lg:w1/2">Contact</button> -->
@@ -43,14 +43,14 @@
 
 <!-- About Section  -->
 <section class="flex flex-col justify-evenly items-center" id="about">
-  <div class="flex justify-center">
+  <div class="flex justify-center  mt-20 mb-10 lg:m-0">
     <h1 class="text-5xl font-semibold">About</h1>
   </div>
   <div class="hidden lg:flex justify-start" style="width: 55vw;">
     <p class="flex text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
   </div>
   <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
-    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
+    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-11/12">
       <div class="flex items-center gap-2 my-2 lg:m-0">
         <img src="experience-icon.png" alt="" style="height: 1.5rem;">
         <h1 class="text-xl font-bold">Work Experience</h1>
@@ -72,7 +72,7 @@
       </div>
     </div>
 
-    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-10/12">
+    <div class="flex flex-col items-center border border-neutral-400 rounded-3xl p-5 lg:w-1/2 w-11/12">
       <div class="flex">
         <img src="education-icon.png" alt="" style="height: 2rem;" class="px-2">
         <h1 class="text-xl font-bold">Education</h1>
@@ -102,11 +102,11 @@
 <!-- Experienc Section  -->
 <section id="experience">
   <div class="flex flex-col justify-evenly items-center" id="experience-container">
-    <div class="flex justify-center my-5">
+    <div class="flex justify-center mt-20 mb-5 lg:m-0">
       <h1 class="text-5xl font-semibold">Experience</h1>
     </div>
     <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl">Frontend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -122,7 +122,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col items-center  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl">Backend Development</h1>
         <div class="flex flex-col items-center">
           <div class="flex flex-wrap gap-3 p-5">
@@ -136,7 +136,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <div class="flex justify-center">
           <h1 class="text-xl">Programming Languages</h1>
         </div>
@@ -158,11 +158,11 @@
 <!-- Projects Section  -->
 <section id="projects">
   <div class="flex flex-col justify-evenly items-center" id="projects-container">
-    <div class="flex justify-center my-5">
+    <div class="flex justify-center my-5 mt-20 mb-5 lg:m-0">
       <h1 class="text-5xl font-semibold">Projects</h1>
     </div>
     <div class="flex flex-col lg:flex-row justify-evenly lg:items-stretch items-center gap-10 mx-3">
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Convocraze</h1>
         <div class="flex flex-col items-start">
           <h1>Chating web app</h1>
@@ -183,7 +183,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Disney Hotstar Clone</h1>
         <div class="flex flex-col items-start">
           <h1>Frontend clone of Disney Hotstar</h1>
@@ -202,7 +202,7 @@
           </div>
         </div>
       </div>
-      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-10/12">
+      <div class="flex flex-col items-start  border-neutral-400 border rounded-3xl p-5 lg:w-1/3 w-11/12">
         <h1 class="text-xl font-bold">Covid Management System</h1>
         <div class="flex flex-col items-start">
           <h1>management of covid vaccination</h1>
@@ -227,7 +227,7 @@
 <!-- Contact Section  -->
 <section id="contactMe">
   <div class="flex flex-col justify-evenly items-center" id="contact-container">
-    <div class="flex flex-col items-center justify-center">
+    <div class="flex flex-col items-center justify-center mt-20 mb-10 lg:m-0">
       <span>Get in Touch</span>
       <h1 class="text-5xl font-semibold">Contact Me</h1>
     </div>
