Content update: updated about and skills content

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
     </div>
     <div class="flex flex-col items-center gap-7">
       <div class="flex flex-col items-center gap-2">
-          <span class="lg:text-base">Hello, I am</span>
+          <span class="lg:text-lg">Hello, I am</span>
           <span class="lg:text-4xl font-semibold lg:font-normal">Rajinder Singh Sodhi</span>
           <span class="lg:text-2xl font-bold" style="color: rgb(114, 111, 111);">Software Engineer</span>
       </div>
@@ -47,7 +47,7 @@
     <h1 class="text-5xl font-semibold">About</h1>
   </div>
   <div class="hidden lg:flex justify-start" style="width: 55vw;">
-    <p class="flex text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I completed my Bachelor of Engineering in Computer Science & Engineering from Chandigarh University in 2024. At Humanli.ai, I work extensively with Angular/React.js, Flask, and Firebase to build AI-powered web applications. My technical skills include Data Structures and Algorithms (Java) and Web Development (MERN/MEAN Stack). I continuously expand my technical expertise, and what I might lack in skills, I make up for with my determination to learn. Outside of my tech interests, I am a passionate football enthusiast.</p>
+    <p class="flex text-justify">I am a Software Engineer with a passion for exploring technology and its transformative impact. I am currently working as a Full Stack Developer at Humanli.ai. I work extensively with Angular/React.js, Flask, and Firebase to build Gen AI Web Applications.</p>
   </div>
   <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
     <div class="flex flex-col items-center border bg-white rounded-3xl p-5 lg:w-1/2 w-11/12">
@@ -115,6 +115,7 @@
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Javascript</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Angular</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Reactjs</p>
+            <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">REST API's</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Bootstrap</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Tailwind CSS</p>
             <p class="border-black border rounded-md bg-slate-950 p-2" style="color: white;">Gen Ai</p>
