--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
     <a href="#about" class="text-lg leading-6 text-gray-900">About</a>
-    <a href="#experience" class="text-lg leading-6 text-gray-900">Experience</a>
+    <a href="#experience" class="text-lg leading-6 text-gray-900">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900">Projects</a>
   </div> 
   <div class="hidden lg:flex lg:flex-1 lg:justify-end">
@@ -100,10 +100,10 @@
 <!-- About Section  -->
 
 <!-- Experienc Section  -->
-<section id="experience">
-  <div class="flex flex-col justify-evenly items-center" id="experience-container">
+<section id="skills">
+  <div class="flex flex-col justify-evenly items-center" id="skills-container">
     <div class="flex justify-center mt-20 mb-5 lg:m-0">
-      <h1 class="text-5xl font-semibold">Experience</h1>
+      <h1 class="text-5xl font-semibold">Technical Skills</h1>
     </div>
     <div class="flex lg:flex-row flex-col justify-evenly lg:items-stretch items-center gap-10 mx-3">
       <div class="flex flex-col items-center  bg-white border rounded-3xl p-5 lg:w-1/3 w-11/12">
