Bug Fix: technical skills scroll effect was not working

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   </div>
   <div class="lg:flex flex lg:justify-center justify-evenly lg:gap-x-12 w-full lg:w-6/12">
     <a href="#about" class="text-lg leading-6 text-gray-900">About</a>
-    <a href="#experience" class="text-lg leading-6 text-gray-900">Technical Skills</a>
+    <a href="#skills" class="text-lg leading-6 text-gray-900">Technical Skills</a>
     <a href="#projects" class="text-lg leading-6 text-gray-900">Projects</a>
   </div> 
   <div class="hidden lg:flex lg:flex-1 lg:justify-end">
